# fem2d-layers

./: .gitignore  CMakeLists.txt  config.h.in
headers/: acoustic2d.h  analytic_functions.h  auxiliary_testing_functions.h  block_of_layers.h  config.h  csr_pattern.h  dof_handler.h  fine_mesh.h  layer.h  line.h  math_functions.h  parameters.h  point.h  result.h  testing.h  triangle.h  vector.h
scripts/: run_ave_0.2_medium  run_ave_0.4_medium  run_ave_1_medium  run_bin_0.2_medium  run_bin_0.2_medium_inv  run_bin_0.4_medium  run_bin_1_medium  run_bin_medium
sources/: acoustic2d.cpp  acoustic2d_triangles.cpp  analytic_functions.cpp  auxiliary_functions.cpp  block_of_layers.cpp  csr_pattern.cpp  dof_handler.cpp  fine_mesh.cpp  layer.cpp  line.cpp  main.cpp  math_functions.cpp  parameters.cpp  point.cpp  result.cpp  triangle.cpp
test_dir/: gauss_hill.msh  gauss_hill2.msh  test0.geo  test1.geo  test_mesh_0.msh  test_mesh_0_0015625.msh  test_mesh_0_003125.msh  test_mesh_0_00625.msh  test_mesh_0_0125.msh  test_mesh_0_025.msh  test_mesh_0_05.msh  test_mesh_1.msh  test_small_10_4.msh
